Ajout slide pour coller du code (entre \begin{frame} et \end{frame})

--- a/Rapports/presentation_compression.tex
+++ b/Rapports/presentation_compression.tex
@@ -249,6 +249,12 @@ Obtention d'un fichier texte de taille 8ko sur 60 min d'acquisition d'evts
 \end{frame}
 
 
+\begin{frame}[fragile]
+\frametitle{Extrait de code}
+
+\end{frame}
+
+
 \begin{frame}
 \frametitle{Conclusion}
 \begin{enumerate}[<+->]
