Conclusion etoffee - creation d une diapo pour recevoir du code

--- a/Rapports/presentation_compression.tex
+++ b/Rapports/presentation_compression.tex
@@ -1,5 +1,4 @@
 \documentclass[10pt,xcolor=pst]{beamer}
-%\usepackage[utf8]{inputenc}
 \usepackage[latin1]{inputenc}
 \usepackage[TS1,T1]{fontenc}
 \usepackage[english,french]{babel}
@@ -249,10 +248,16 @@ Obtention d'un fichier texte de taille 8ko sur 60 min d'acquisition d'evts
 \end{frame}
 
 
-\begin{frame}[fragile]
-\frametitle{Extrait de code}
+\begin{frame}[fragile,plain]
+\frametitle{Extrait de code}%extrait a caser entre begin{verbatim} et end{verbatim}
+\begin{verbatim}
 
+
+
+\end{verbatim}
 \end{frame}
+
+\section{Conclusion}
 
 
 \begin{frame}
@@ -261,11 +266,25 @@ Obtention d'un fichier texte de taille 8ko sur 60 min d'acquisition d'evts
 \item
 Un travail de documentation et de compréhension du sujet
 \item
-Un travail avec des gens qui ne sont pas informaticiens
+Un travail avec des équipes de différentes disciplines
 \item
-Ce qui reste à faire
+Ce qui reste à faire: 
+	\begin{itemize}
+		\item
+		Travail sur le GPS (réception et montage du matériel - format de sortie des données - algo du delta)
+		\item
+		Ajout des données de HouseKeeping
+		\item
+		Une fois le matériel complètement réceptionné	et installé: adapter les algorithmes par rapport au format réel de sortie
+	\end{itemize}
 \end{enumerate}
 
+\end{frame}
+
+\begin{frame}
+\begin{center}
+\large{Merci de votre écoute}
+\end{center}
 \end{frame}
 
 
