Ajout d'une version pdf de la presentation

--- a/Rapports/presentation_compression.tex
+++ b/Rapports/presentation_compression.tex
@@ -248,14 +248,12 @@ Obtention d'un fichier texte de taille 8ko sur 60 min d'acquisition d'evts
 \end{frame}
 
 
-\begin{frame}[fragile,plain]
-\frametitle{Extrait de code}%extrait a caser entre begin{verbatim} et end{verbatim}
-\begin{verbatim}
-
-
-
-\end{verbatim}
-\end{frame}
+%\begin{frame}[fragile,plain]
+%\frametitle{Extrait de code}%extrait a caser entre begin{verbatim} et end{verbatim}
+%\begin{verbatim}
+%
+%\end{verbatim}
+%\end{frame}
 
 \section{Conclusion}
 
